--- a/content.yaml
+++ b/content.yaml
@@ -33,8 +33,8 @@ skills     :
 experience  : 'Experience'
 experiences : 
   - title: '*Consultant*, *Senior Consultant* _Detica_, Guildford, UK'
-    start: '2007'
-    end  : '2012'
+    dstart: '2007'
+    dend  : '2012'
     litems:
       - 'Core member of _Detica NetReveal product development team, working on a highly configurable J2EE social network analysing fraud detection system (see [deticanetreveal.com](http://deticanetreveal.com)).'
       - 'Led team of five to design and develop a graphical (swing) configuration system for a rule-based scoring engine.'
@@ -52,8 +52,8 @@ experiences :
         - "2010 Chairman's gold award, BAE Systems."
         - "2009 British Insurance Award for Technology (RBS Insurance)."
   - title: '*Student Developer* _Filogix Inc_., Toronto, Canada'
-    start: '2005'
-    end  : '2006'
+    dstart: '2005'
+    dend  : '2006'
     litems:
       - 'Worked on _Filogix Express_, J2EE mortgage origination system.'
       - 'Created and maintained build system in ANT ot build, deploy and promote.'
