shuffle content a bit

--- a/src/content.yaml
+++ b/src/content.yaml
@@ -20,7 +20,8 @@ skills     :
   - 'JUnit, RSpec, Easymock.'
   - 'J2EE, Spring framework, Swing, Sinatra, Rails.'
   - 'Maven, ANT, Rake.'
-  - 'HTTP (and RESTful web services), SOAP.'
+  - 'SSH, HTTP (and RESTful web services), SOAP.'
+  - 'zsh, bash, gpg'
   - 'HTML, CSS, LaTeX, RSS, Atom.'
   - 'Oracle, CouchDB, sqlite, Redis.'
   - 'Vim, IntelliJ IDEA, Eclipse.'
