add note about working from home

--- a/src/content.yaml
+++ b/src/content.yaml
@@ -44,6 +44,7 @@ experiences :
       - 'Led team of three to bring product into line with legal accessibility requirements'
       - 'Interviewed and discussed recruitment of several developers.'
       - 'Visited client sites to discuss and assist with integration with client systems.'
+      - 'Worked final ten months from home in Vancouver, independently and to schedule.'
       - 'Converted product from ad-hoc releases from ANT scripts to continuous integration based on Maven and Hudson (now Jenkins).'
       - 'Maintained detailed documentation and provided support to consultants to facilitate customisation and extension.'
       - 'Product has received several industry plaudits:'
