add qr image to bottom

--- a/src/content.yaml
+++ b/src/content.yaml
@@ -98,3 +98,6 @@ interests:
   - 'Coding. See [github.com/eddsteel](http://github.com/eddsteel).'
   - 'Food.'
   - 'Travel.'
+ 
+footerimghuge: 'support/qr-huge.png'
+footerimg: 'support/qr.png'
