--- a/src/content.yaml
+++ b/src/content.yaml
@@ -33,7 +33,7 @@ skills     :
 
 experience  : 'Experience'
 experiences : 
-  - title: '**Consultant**, **Senior Consultant** _Detica_, Guildford, UK'
+  - title: '**Consultant**, **Senior Consultant** _Detica_, Guildford, UK/ Toronto, ON'
     dstart: '2007'
     dend  : '2012'
     litems:
