update skill orders

--- a/src/content.yaml
+++ b/src/content.yaml
@@ -16,18 +16,18 @@ contact_other   :
 skill      : 'Skills'
 skill_st   : 'By capability or experience'
 skills     : 
-  - 'Java, Ruby, JavaScript, bash, PHP, Haskell, ML, C\# (mono), C.'
+  - 'Java, Ruby, JavaScript, PHP, Haskell, ML, C\# (mono), C.'
   - 'JUnit, RSpec, Easymock.'
   - 'J2EE, Spring framework, Swing, Sinatra, Rails.'
   - 'Maven, ANT, Rake.'
   - 'SSH, HTTP (and RESTful web services), SOAP.'
-  - 'zsh, bash, gpg'
-  - 'HTML, CSS, \LaTeX, RSS, Atom.'
+  - 'zsh, bash, cron, rsync, gpg'
+  - 'HTML, CSS, \LaTeX, Atom, RSS.'
   - 'Oracle, CouchDB, sqlite, Redis.'
   - 'Vim, IntelliJ IDEA, Eclipse.'
   - 'Perforce, git, svn.'
   - 'Apache, nginx, Apache Tomcat, IBM WebSphere.'
-  - 'Debian, Ubuntu, Arch Linux, Slackware, Windows, gentoo, OS X'
+  - 'Debian, Ubuntu, OS X, Arch Linux, Slackware, Windows, gentoo'
   - 'English, German, French.'
   - 'Driving licence with no penalty points'
 
