--- a/src/content.yaml
+++ b/src/content.yaml
@@ -54,7 +54,7 @@ experiences :
         - "2010 Fraud Initiative award (RSA Insurance), Insurance Times Awards."
         - "2010 Chairman's gold award, BAE Systems."
         - "2009 British Insurance Award for Technology (RBS Insurance)."
-  - title: '**Student Developer** _Filogix Inc_., Toronto, Canada'
+  - title: '**Student Developer** _Filogix Inc_., Toronto, ON'
     dstart: '2005'
     dend  : '2006'
     litems:
